rnsc/test_data/rns_integration/error/parser/type_hints/double/not_f64_with_space.rns
.class @double "not a double" ; <- has space and should be quoted in help
.super java/lang/Object
